--- a/latlon.ipynb
+++ b/latlon.ipynb
@@ -178,41 +178,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Postcode           Borough                     Neighbourhood\n",
-      "0      M3A        North York                         Parkwoods\n",
-      "1      M4A        North York                  Victoria Village\n",
-      "2      M5A  Downtown Toronto         Regent Park, Harbourfront\n",
-      "3      M6A        North York  Lawrence Manor, Lawrence Heights\n",
-      "4      M7A      Queen's Park                      Queen's Park\n",
-      "5      M9A         Etobicoke                  Islington Avenue\n",
-      "6      M1B       Scarborough                    Malvern, Rouge\n",
-      "7      M3B        North York                   Don Mills North\n",
-      "8      M4B         East York   Parkview Hill, Woodbine Gardens\n",
-      "9      M5B  Downtown Toronto          Garden District, Ryerson\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M9A</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Islington Avenue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern, Rouge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M3B</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Don Mills North</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M4B</td>\n",
+       "      <td>East York</td>\n",
+       "      <td>Parkview Hill, Woodbine Gardens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M5B</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Garden District, Ryerson</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(103, 3)"
+       "  Postcode           Borough                     Neighbourhood\n",
+       "0      M3A        North York                         Parkwoods\n",
+       "1      M4A        North York                  Victoria Village\n",
+       "2      M5A  Downtown Toronto         Regent Park, Harbourfront\n",
+       "3      M6A        North York  Lawrence Manor, Lawrence Heights\n",
+       "4      M7A      Queen's Park                      Queen's Park\n",
+       "5      M9A         Etobicoke                  Islington Avenue\n",
+       "6      M1B       Scarborough                    Malvern, Rouge\n",
+       "7      M3B        North York                   Don Mills North\n",
+       "8      M4B         East York   Parkview Hill, Woodbine Gardens\n",
+       "9      M5B  Downtown Toronto          Garden District, Ryerson"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame.from_records(list_of_rows[1:], columns=list_of_rows[0])\n",
-    "print(df.head(10))\n",
-    "df.shape"
+    "df.head(10)"
    ]
   },
   {
