--- a/latlon.ipynb
+++ b/latlon.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -329,9 +329,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postcode</th>\n",
+       "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
-       "      <th>Neighbourhood</th>\n",
+       "      <th>Neighborhood</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "    </tr>\n",
@@ -422,17 +422,17 @@
        "</div>"
       ],
       "text/plain": [
-       "  Postcode           Borough                     Neighbourhood   Latitude  \\\n",
-       "0      M3A        North York                         Parkwoods  43.753259   \n",
-       "1      M4A        North York                  Victoria Village  43.725882   \n",
-       "2      M5A  Downtown Toronto         Regent Park, Harbourfront  43.654260   \n",
-       "3      M6A        North York  Lawrence Manor, Lawrence Heights  43.718518   \n",
-       "4      M7A      Queen's Park                      Queen's Park  43.662301   \n",
-       "5      M9A         Etobicoke                  Islington Avenue  43.667856   \n",
-       "6      M1B       Scarborough                    Malvern, Rouge  43.806686   \n",
-       "7      M3B        North York                   Don Mills North  43.745906   \n",
-       "8      M4B         East York   Parkview Hill, Woodbine Gardens  43.706397   \n",
-       "9      M5B  Downtown Toronto          Garden District, Ryerson  43.657162   \n",
+       "  PostalCode           Borough                      Neighborhood   Latitude  \\\n",
+       "0        M3A        North York                         Parkwoods  43.753259   \n",
+       "1        M4A        North York                  Victoria Village  43.725882   \n",
+       "2        M5A  Downtown Toronto         Regent Park, Harbourfront  43.654260   \n",
+       "3        M6A        North York  Lawrence Manor, Lawrence Heights  43.718518   \n",
+       "4        M7A      Queen's Park                      Queen's Park  43.662301   \n",
+       "5        M9A         Etobicoke                  Islington Avenue  43.667856   \n",
+       "6        M1B       Scarborough                    Malvern, Rouge  43.806686   \n",
+       "7        M3B        North York                   Don Mills North  43.745906   \n",
+       "8        M4B         East York   Parkview Hill, Woodbine Gardens  43.706397   \n",
+       "9        M5B  Downtown Toronto          Garden District, Ryerson  43.657162   \n",
        "\n",
        "   Longitude  \n",
        "0 -79.329656  \n",
@@ -447,7 +447,7 @@
        "9 -79.378937  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +457,7 @@
     "gc_df.columns = ['Postcode', 'Latitude', 'Longitude']\n",
     "\n",
     "latlon_df = pd.merge(df, gc_df, on='Postcode')\n",
+    "latlon_df.rename(index=str, columns={\"Postcode\": \"PostalCode\", \"Neighbourhood\": \"Neighborhood\"}, inplace=True)\n",
     "latlon_df.head(10)"
    ]
   },
